--- a/ansible/roles/immich/tasks/main.yml
+++ b/ansible/roles/immich/tasks/main.yml
@@ -25,7 +25,7 @@
       data: "{{ item.data }}"
   loop:
       - name: ts-authkey
-        data: "{{ tailscale.ts_authkey }}"
+        data: "{{ tailscale.authkey }}"
       - name: immich-db-hostname
         data: "{{ immich.db_hostname }}"
       - name: immich-db-name
