--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/ubuntu/base:latest",
+  "image": "mcr.microsoft.com/devcontainers/base/ubuntu",
   "runArgs": ["--device=/dev/net/tun"],
   "features": {
     "ghcr.io/tailscale/codespace/tailscale": {},
